--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,16 @@
             <version>2.9.0</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.stripe</groupId>-->
+<!--            <artifactId>stripe-java</artifactId>-->
+<!--            <version>21.8.0</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>com.stripe</groupId>
             <artifactId>stripe-java</artifactId>
-            <version>21.8.0</version>
+            <version>5.21.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
