prod file changed.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,3 +6,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 kafka-server-url=${KAFKA_URL}
 kafka-server-port=${KAFKA_PORT}
+
+spring.cloud.consul.host=${CONSUL_HOST}
+spring.cloud.consul.port=${CONSUL_PORT}
+## grafana
+management.endpoints.web.exposure.include=*
